--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://www.motionpoint.com/express"
 documentation: "https://support.motionpointexpress.com/hc/en-us"
 versions:
-  - sha: ""
+  - sha: "2dd41ed0029e696fb87ef9b7de91b65274b579d4"
     changeNotes: "Initial release"
